5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1807_2564.log
== TEST (2019-06-06 10:57:51) 
-- CODE:
from numpy import*
a=array(eval(input("Primeiro vetor ")))
b=array(eval(input("Segundo vetro: ")))
cont=zeros(3, dtype=int)
for i in range(0,size(a)):
	if(a[i]>b[i]):
		cont[0]=cont[0]+1
	elif(a[i]==b[i]):
		cont[1]=cont[1]+1
	else:
		cont[2]=cont[2]+1
print(cont)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:58:46) 
-- CODE:
from numpy import*
a=array(eval(input("Primeiro vetor ")))
b=array(eval(input("Segundo vetro: ")))
cont=zeros(3, dtype=int)
for i in range(0,size(a)):
	if(a[i]>b[i]):
		cont[0]=cont[0]+1
	elif(a[i]==b[i]):
		cont[1]=cont[1]+1
	else:
		cont[2]=cont[2]+1
print(cont)		
		
-- EXECUTION TIME:
0.922268
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:53:41) 
-- CODE:
from numpy import*
a=array(eval(input("n.de gols: ")))
b=array(eval(input("n.de gols adversario: ")))
c=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=b[i]):
		c[0]=c[0]+1
	if(a[i]==b[i])	:
		c[1]=c[1]+1
	if(a[i]=b[i]):
		c[2]=c[2]+1
print(c)		
-- ERROR:
File "XXXX", line 10
    if(a[i]=b[i]):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:54:06) 
-- CODE:
from numpy import*
a=array(eval(input("n.de gols: ")))
b=array(eval(input("n.de gols adversario: ")))
c=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=b[i]):
		c[0]=c[0]+1
	if(a[i]==b[i])	:
		c[1]=c[1]+1
	if(a[i]!=b[i]):
		c[2]=c[2]+1
print(c)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:56:05) 
-- CODE:
from numpy import*
a=array(eval(input("n.de gols: ")))
b=array(eval(input("n.de gols adversario: ")))
c=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=b[i]):
		c[0]=c[0]+1
	if(a[i]==b[i])	:
		c[1]=c[1]+1
	if(a[i]<=b[i]):
		c[2]=c[2]+1
print(c)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 15:56:14) 
-- CODE:
from numpy import*
a=array(eval(input("n.de gols: ")))
b=array(eval(input("n.de gols adversario: ")))
c=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=b[i]):
		c[0]=c[0]+1
	if(a[i]==b[i])	:
		c[1]=c[1]+1
	if(a[i]<=b[i]):
		c[2]=c[2]+1
print(c)		
-- EXECUTION TIME:
0.741911
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[10  3  5]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[13  1  1]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 15:57:01) 
-- CODE:
from numpy import*
a=array(eval(input("n.de gols: ")))
b=array(eval(input("n.de gols adversario: ")))
c=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=b[i]):
		c[0]=c[0]+1
	elif(a[i]==b[i])	:
		c[1]=c[1]+1
	else:
		c[2]=c[2]+1
print(c)		
-- EXECUTION TIME:
1.01648
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[10  0  2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[13  0  0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:57:05) 
-- CODE:
from numpy import*
a=array(eval(input("n.de gols: ")))
b=array(eval(input("n.de gols adversario: ")))
c=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=b[i]):
		c[0]=c[0]+1
	elif(a[i]==b[i])	:
		c[1]=c[1]+1
	else:
		c[2]=c[2]+1
print(c)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 15:57:09) 
-- CODE:
from numpy import*
a=array(eval(input("n.de gols: ")))
b=array(eval(input("n.de gols adversario: ")))
c=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=b[i]):
		c[0]=c[0]+1
	elif(a[i]==b[i])	:
		c[1]=c[1]+1
	else:
		c[2]=c[2]+1
print(c)		
-- EXECUTION TIME:
0.955501
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[10  0  2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[13  0  0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 15:58:08) 
-- CODE:
from numpy import*
a=array(eval(input("n.de gols: ")))
b=array(eval(input("n.de gols adversario: ")))
c=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>b[i]):
		c[0]=c[0]+1
	elif(a[i]==b[i])	:
		c[1]=c[1]+1
	else:
		c[2]=c[2]+1
print(c)		
-- EXECUTION TIME:
0.962567
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
n.de gols: n.de gols adversario: [12  1  0]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:58:37) 
-- CODE:
from numpy import*
a=array(eval(input("n.de gols: ")))
b=array(eval(input("n.de gols adversario: ")))
c=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>b[i]):
		c[0]=c[0]+1
	elif(a[i]==b[i])	:
		c[1]=c[1]+1
	else:
		c[2]=c[2]+1
print(c)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 15:59:05) 
-- CODE:
from numpy import*
a=array(eval(input("n.de gols: ")))
b=array(eval(input("n.de gols adversario: ")))
c=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>b[i]):
		c[0]=c[0]+1
	elif(a[i]==b[i])	:
		c[1]=c[1]+1
	else:
		c[2]=c[2]+1
print(c)		
-- EXECUTION TIME:
1.00972
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:24:00) 
-- CODE:
from numpy import*
a=array(eval(input("n.de gols: ")))
b=array(eval(input("n.de glos adversario: ")))
c=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=b[i]):
		c[0]=c[0]+1
	if(a[i]==b[i]):
		c[1]=c[1]+1
	if(a[i]<=b[i]):
		c[2]=c[2]+1
print(c)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:24:57) 
-- CODE:
from numpy import*
a=array(eval(input("n.de gols: ")))
b=array(eval(input("n.de glos adversario: ")))
c=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>b[i]):
		c[0]=c[0]+1
	if(a[i]==b[i]):
		c[1]=c[1]+1
	if(a[i]<b[i]):
		c[2]=c[2]+1
print(c)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:25:24) 
-- CODE:
from numpy import*
a=array(eval(input("n.de gols: ")))
b=array(eval(input("n.de glos adversario: ")))
c=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>b[i]):
		c[0]=c[0]+1
	if(a[i]==b[i]):
		c[1]=c[1]+1
	if(a[i]<b[i]):
		c[2]=c[2]+1
print(c)		
-- EXECUTION TIME:
0.871187
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
